tests/codegen/errors/codegen/arity/atom.codegen.diagnostic.make.string.arity/diagnostic-make-string-arity.mon
;; TEST-ID: tests.codegen.branch.diagnostic-make-string-arity
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SUBSET: arity
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-QUALITY: branch-regression
;; TEST-CODEGEN-ATOM: atom.codegen.diagnostic.make.string.arity
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.runtime-codegen-corpus
;; TEST-PURPOSE: Cover make-string arity diagnostics.
;; TEST-ATOM: make-string should require length and fill char arguments.
;; TEST-EXPECT: fail:compile
;; TEST-COVERAGE: codegen.c:6947 make-string arity diagnostic
;; TEST-COVERAGE: codegen.c:3476 REQUIRE_ARGS

;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/arity/atom.codegen.diagnostic.make.string.arity
;; TEST-MENU-PATH: codegen/errors/codegen/arity/atom.codegen.diagnostic.make.string.arity
;; TEST-ATOM-LEAF: atom.codegen.diagnostic.make.string.arity
;; TEST-CLI-TARGET: codegen errors codegen arity
(module Main)
(make-string 3)
